--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Anglo-Israelism'
 - !lcc 'DS'
 - !lcsh 'Lost tribes of Israel'
+- GITenberg
 title: The Lost Ten Tribes, and 1882
 url: http://www.gutenberg.org/ebooks/27177
